testsuite/tests/lexing/escape.ocaml.reference
Line 7, characters 15-17:
7 | let invalid = "\99" ;;
                   ^^
Warning 14 [illegal-backslash]: illegal backslash escape in string.
Hint: Single backslashes \ are reserved for escape sequences
(\n, \r, ...). Did you check the list of OCaml escape sequences?
To get a backslash character, escape it with a second backslash: \\.

val invalid : string = "\\99"
Line 1, characters 15-19:
1 | let invalid = "\999" ;;
                   ^^^^
Error: Illegal backslash escape in string or character (\999): 999 is outside the range of legal characters (0-255).
Line 1, characters 15-20:
1 | let invalid = "\o777" ;;
                   ^^^^^
Error: Illegal backslash escape in string or character (\o777): o777 (=511) is outside the range of legal characters (0-255).
Line 1, characters 15-17:
1 | let invalid = "\o77" ;;
                   ^^
Warning 14 [illegal-backslash]: illegal backslash escape in string.
Hint: Single backslashes \ are reserved for escape sequences
(\n, \r, ...). Did you check the list of OCaml escape sequences?
To get a backslash character, escape it with a second backslash: \\.

val invalid : string = "\\o77"
Line 1, characters 15-17:
1 | let invalid = "\o99" ;;
                   ^^
Warning 14 [illegal-backslash]: illegal backslash escape in string.
Hint: Single backslashes \ are reserved for escape sequences
(\n, \r, ...). Did you check the list of OCaml escape sequences?
To get a backslash character, escape it with a second backslash: \\.

val invalid : string = "\\o99"
Line 2, characters 14-17:
2 | let invalid = #'' ;;
                  ^^^
Error: Illegal empty character literal ''
  Hint: Did you mean ' ' or a type variable 'a?
Line 1, characters 14-21:
1 | let invalid = #'\400' ;;
                  ^^^^^^^
Error: Illegal backslash escape in string or character (#'\400'): 400 is outside the range of legal characters (0-255).
Line 1, characters 14-18:
1 | let invalid = #'\xAAA' ;;
                  ^^^^
Error: Illegal backslash escape in string or character (\x)
Line 1, characters 14-18:
1 | let invalid = #'\xA' ;;
                  ^^^^
Error: Illegal backslash escape in string or character (\x)
Line 1, characters 14-18:
1 | let invalid = #'\b1010' ;;
                  ^^^^
Error: Illegal backslash escape in string or character (\b)

